# gazebo_quadruped

./: README.md
go1_description/: CMakeLists.txt  package.xml
go1_description/config/: go1.rviz
go1_description/launch/: load_go1.launch.py
go1_description/urdf/go1/: go1.urdf.xacro
go1_gazebo/: CMakeLists.txt  package.xml
go1_gazebo/config/: go1_ros_control.yaml
go1_gazebo/launch/: go1_gazebo.launch.py
quadruped_controller/: package.xml  setup.cfg  setup.py
